--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,10 +1,50 @@
 .header {
-  margin: 0 auto;
-  background: #77b777;
-  border-radius: 10px;
-  min-height: 50px;
-  margin-top: 10px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  width: 100dvw;
+
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+    
+    ul {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      list-style: none;
+    }
+
+    .action-buttons {
+      color: white;
+      font-weight: 700;
+      background-color: rgb(25, 110, 17);
+    }
+  }
+
+  .nav-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 0.5rem 0;
+
+    ul {
+      display: flex;
+      align-items: center;
+      gap: 2rem;
+      list-style: none;
+    }
+
+    .route:hover {
+      cursor: pointer;
+      font-weight: bold;
+      color: rgb(60, 219, 60);
+    }
+  }
 }
