--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -9,7 +9,6 @@
   .main .main__aside {
     width: 30%;
     min-height: 80dvh;
-    background: #77b777;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,7 +16,6 @@
   
   .main .main__products {
     width: 69%;
-    background: #77b777;
     min-height: 80dvh;
     border-radius: 10px;
     display: flex;
@@ -25,4 +23,7 @@
     align-items: center;
   }
   
-  
+  .main__products{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
