--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
