--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,9 +1,109 @@
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 1rem 0 0 0;
+  width: 100%;
+  background-color: var(--primary-color);
+  color: white;
+  font-size: 1.2rem;
+
+  .footer-container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    background: #77b777;
-    min-height: 50px;
+    gap: 3rem;
+    margin: 0 3rem;
+    padding: 1rem 2rem;
+    border-bottom: 1px solid white;
+
+    .footer-contact {
+      width: 40%;
+
+      h3 {
+        font-size: 1.5rem;
+        margin-bottom: 0.7rem;
+      }
+
+      .contact-option {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        margin-bottom: 0.3rem;
+
+        a {
+          color: white;
+          transition: all 0.3s;
+
+          &:hover {
+            color: var(--secondary-color);
+            cursor: pointer;
+          }
+        }
+
+        img {
+          width: 2rem;
+          height: 2rem;
+        }
+      }
+    }
+
+    .footer-media {
+      width: 60%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+
+      .footer-social {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        margin-bottom: 0.7rem;
+
+        a {
+          color: white;
+          font-size: 1.5rem;
+          transition: all 0.3s;
+
+          &:hover {
+            color: var(--secondary-color);
+            cursor: pointer;
+          }
+        }
+
+        img {
+          width: 2rem;
+          height: 2rem;
+          transition: all 0.3s;
+
+          &:hover {
+            transform: scale(1.1);
+          }
+        }
+      }
+
+      .footer-about {
+        margin-bottom: 0.7rem;
+
+        h2 {
+          font-size: 1.5rem;
+          margin-bottom: 0.7rem;
+        }
+      }
+    }
   }
-  
+
+  .footer-bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0;
+    width: 100%;
+    color: white;
+    font-size: 1.2rem;
+  }
+}
