--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -36,6 +36,7 @@
       .header-action-button a:hover {
         background-color: var(--secondary-color);
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        color: white;
       }
     }
   }
