--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,29 +1,49 @@
-
 .main {
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
     margin-bottom: 10px;
-  }
+}
   
-  .main .main__aside {
-    width: 30%;
-    min-height: 80dvh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .main .main__products {
-    width: 69%;
-    min-height: 80dvh;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .main__products{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
+.main .main__aside {
+  width: 30%;
+  min-height: 80dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main .main__products {
+  width: 69%;
+  min-height: 80dvh;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main__products{
+  display: flex;
+  flex-direction: column;
+}
+
+.cars{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.title-container{
+  margin-bottom: 1.5rem;
+  padding-bottom: 0.2rem;
+  border-bottom: 0.3rem solid #6e6d6d;
+}
+
+.title{
+  font-size: 2rem;
+  font-weight: bold;
+  background: -webkit-linear-gradient(#eeeeee, #000000);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
