--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,8 +1,10 @@
 .main {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     margin-top: 10px;
     margin-bottom: 10px;
+    gap: 1rem;
 }
   
 .main .main__aside {
@@ -13,7 +15,7 @@
   align-items: center;
 }
 
-.main .main__products {
+.main .main__products{
   width: 69%;
   min-height: 80dvh;
   border-radius: 10px;
@@ -25,6 +27,11 @@
 .main__products{
   display: flex;
   flex-direction: column;
+}
+
+.main_section{
+  display: grid;
+  grid-template-columns: 40% 60%;
 }
 
 .cars{
@@ -46,4 +53,11 @@
   background: -webkit-linear-gradient(#eeeeee, #000000);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.brand-section{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  margin-bottom: 1rem;
 }
