--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -8,6 +8,7 @@
   background-color: var(--primary-color);
   color: white;
   font-size: 1.2rem;
+  border-top: 2px solid white;
 
   .footer-container {
     display: flex;
